# Agent-ValueBench

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  requirements.txt
CaseGen/: .gitignore  (+8 more)
HarnessEval/: .env.example  .gitignore  README.md  mft08_skill_case_ids.txt  prepare_mft08_skill_experiment.py  prepare_pvq40_10dim_skill_experiment.py  pvq40_10dim_skill_case_ids.txt  pyproject.toml
HarnessEval/adapters/agent_valuebench/: adapter.py  run_adapter.py
HarnessEval/adapters/agent_valuebench/template/: instruction.md  task.toml
HarnessEval/adapters/agent_valuebench/template/environment/: Dockerfile  tool_harness.py
HarnessEval/adapters/agent_valuebench/template/solution/: solve.sh
HarnessEval/adapters/agent_valuebench/template/tests/: evaluate.py  test.sh
HarnessEval/scripts/: export_skill_run_outputs.py  prepare_harness_assets.py  run_openclaw.py  run_openclaw_batch.py  run_openclaw_mft08_skill_batch.py  run_openclaw_pvq40_skill_batch.py
HarnessEval/skills_value_priority_mft08/claude_sonnet_4_6/mft08-value-priority/: SKILL.md
HarnessEval/skills_value_priority_mft08/claude_sonnet_4_6/mft08-value-priority/references/: conflict-examples.md
HarnessEval/skills_value_priority_mft08/gpt_5_4/mft08-value-priority/: SKILL.md
HarnessEval/skills_value_priority_mft08/kimi_k2_5/mft08-value-priority/: SKILL.md
HarnessEval/skills_value_priority_pvq40/claude_sonnet_4_6/pvq40-value-priority/: SKILL.md
HarnessEval/skills_value_priority_pvq40/gpt_5_4/pvq40-value-priority/: SKILL.md
HarnessEval/skills_value_priority_pvq40/kimi_k2_5/pvq40-value-priority/: SKILL.md
(+9569 files in other folders)
