[project]
name = "agent-valuebench"
version = "0.1.0"
description = "A benchmark for evaluating latent psychological and cultural values in AI agent behavior"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
